--- a/Lect76InnerClasses/README
+++ b/Lect76InnerClasses/README
@@ -7,4 +7,6 @@ or its outer class without first creating an instance of that class.
 2. Non-static nested classes (Inner classes). This class can access all method and fields of its outer 
 class, even those marked as private.
 3. Local class: it's an inner class defined inside of scope block (usually a method)
-4. Anonymous class : is a nested class without a class name
+4. Anonymous class : is a nested class without a class name, it's local too, but it has to be declared 
+and instantiated at the same time as it has no name. And its use is only required once.
+
